# StockfishParcelizedCompose

./: README.md  build.gradle  settings.gradle
StockfishFragmented/: build.gradle
StockfishFragmented/src/androidTest/java/com/loloof64/stockfishfragmented/: ExampleInstrumentedTest.kt
StockfishFragmented/src/main/: AndroidManifest.xml
StockfishFragmented/src/main/cpp/: CMakeLists.txt  stockfishfragmented.cpp
StockfishFragmented/src/main/cpp/stockfish/: position.h  search.cpp  uci.cpp  uci.h
StockfishFragmented/src/main/cpp/utils/: jniutils.cpp  jniutils.h  sharedioqueues.h  stockfishchannel.cpp  stockfishchannel.h
StockfishFragmented/src/main/java/com/loloof64/stockfishfragmented/: NativeLib.kt
StockfishFragmented/src/test/java/com/loloof64/stockfishfragmented/: ExampleUnitTest.kt
app/: build.gradle
app/src/androidTest/java/com/loloof64/stockfishparcelizedcompose/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/loloof64/stockfishparcelizedcompose/: MainActivity.kt
app/src/main/java/com/loloof64/stockfishparcelizedcompose/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/loloof64/stockfishparcelizedcompose/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
